[package]
name = "snac3"
version = "0.1.0"
edition = "2024"

[[bin]]
doctest = false
name = "snac3"
test = false

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "net", "macros"] }
tower-http = { version = "0.6.8", features = ["trace"] }
